--- a/frontend/src/pages/user/employee.css
+++ b/frontend/src/pages/user/employee.css
@@ -43,6 +43,27 @@ body {
   transform: translateY(-2px);
 }
 
+.info-button {
+  padding: 12px 25px;
+  background: #0d6efd;
+  backdrop-filter: blur(10px);
+  border: 1px solid #dee2e6;
+  border-radius: 24px;
+  font-weight: 700;
+  font-size: 0.95rem;
+  color: #ffff;
+  cursor: pointer;
+  box-shadow: 0 4px 15px rgba(0, 0, 0, 0.05);
+  transition: all 0.25s ease-in-out;
+  margin-top: -29px;
+  margin-left: 1060px;
+}
+
+.info-button:hover {
+  background-color: #0056b3;
+  transform: translateY(-2px);
+}
+
 /* === Glass Card Form === */
 .form-card {
   background: rgba(255, 255, 255, 0.6);
@@ -53,7 +74,7 @@ body {
   max-width: 500px;
   width: 100%;
   border: 1px solid rgba(255, 255, 255, 0.4);
-  margin-top: 60px;
+  margin-top: 30px;
 }
 
 /* === Form Title === */
